--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-push-notification": "^1.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "recharts": "^2.1.9",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
